--- a/src/app/components/side-nav/nav-group/nav-button/nav-button.component.html
+++ b/src/app/components/side-nav/nav-group/nav-button/nav-button.component.html
@@ -1,5 +1,6 @@
 <button
   class="button"
+  [routerLink]="route"
   [ngClass]="
     impairedMode ? 'btn btn-warning' : 'btn btn-outline-secondary button'
   "
