--- a/src/app/components/side-nav/nav-group/nav-group.component.html
+++ b/src/app/components/side-nav/nav-group/nav-group.component.html
@@ -12,6 +12,7 @@
       [iconName]="'bi bi-' + buttonsIconsName[i]"
       [impairedMode]="impairedMode"
       [fontSize]="fontSize"
+      [route]="buttonsRoutes[i]"
     ></app-nav-button>
   </div>
 </div>
